--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VUE_APP_TITLE=Shine
-VUE_APP_API=http://dev.hemantbhutanrealestate.com/api/
+VUE_APP_API=https://dev.hemantbhutanrealestate.com/api/
