--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@vueuse/core": "^8.7.4",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "firebase-tools": "^11.1.0",
+    "global": "^4.4.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.2"
