--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^8.7.4",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.2",
     "firebase-tools": "^11.1.0",
     "global": "^4.4.0",
     "sitemap-webpack-plugin": "^1.1.1",
