--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^9.9.2",
     "firebase-tools": "^11.1.0",
     "global": "^4.4.0",
+    "object-to-array-convert": "^1.1.0",
     "sitemap-webpack-plugin": "^1.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
