--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sitemap-webpack-plugin": "^1.1.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-toast-notification": "^0.6",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
