--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 VUE_APP_TITLE=Shine
 VUE_APP_API=https://booking.shinebhutan.com/api/
+VUE_SHOP_URL=https://shop.shinebhutan.com/
+VUE_BOOKING_URL=https://booking.shinebhutan.com/
