--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "object-to-array-convert": "^1.1.0",
     "sitemap-webpack-plugin": "^1.1.1",
     "vue": "^3.2.13",
+    "vue-meta": "2.4.0",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^0.6",
     "vuex": "^4.0.2"
