--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "global": "^4.4.0",
     "object-to-array-convert": "^1.1.0",
     "sitemap-webpack-plugin": "^1.1.1",
-    "vue": "^3.2.13",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.x",
     "vue-meta": "2.4.0",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^0.6",
